<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@drawable/background"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dip">
    <LinearLayout
		android:orientation="vertical"
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:layout_gravity="center" >
	<TextView  
    	android:text="@string/create_new"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:layout_gravity="center"
		android:layout_marginBottom="15dip"
		android:textSize="20.5sp" 
		android:textStyle="bold"
		android:textColor="@color/black"
		/>
	<TextView
		android:text="@string/username"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:layout_gravity="left"
		android:textSize="15.5sp" 
		android:textStyle="bold"
		android:textColor="@color/black"
		/>
	<EditText
		android:id="@+id/username"
		android:singleLine="true"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		/>
	<TextView
		android:text="@string/passwd"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:layout_gravity="left"
		android:textSize="15.5sp" 
		android:textStyle="bold"
		android:textColor="@color/black"
		/>
	<EditText
		android:id="@+id/password"
		android:password="true"
		android:singleLine="true"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		/>
	<TextView
		android:text="@string/confirm_passwd"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:layout_gravity="left"
		android:textSize="15.5sp"
		android:textColor="@color/black" 
		/>
	<EditText
		android:id="@+id/password_confirm"
		android:password="true"
		android:singleLine="true"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		/>	
	<Button
		android:id="@+id/done_button"
		android:text="@string/done"
		android:layout_marginTop="20dip"
		android:textSize="20dp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textStyle="bold"
		/>
	<Button
		android:id="@+id/cancel_button"
		android:text="@string/cancel"
		android:layout_marginTop="20dip"
		android:textSize="20dp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textStyle="bold"
		/>
	</LinearLayout>
</LinearLayout>
