<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dip">
    <LinearLayout 
        android:orientation="vertical" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView  
            android:text="@string/login_title"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
			android:layout_gravity="center"
			android:layout_marginBottom="15dip"
			android:textSize="20.5dp"
			android:textColor="@color/black"
			android:textStyle="bold" />
       	<TextView
			android:text="@string/enter_username"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_gravity="left"
			android:textSize="15.5sp"
			android:textStyle="bold"
			android:textColor="@color/black"/>
     	<EditText
			android:id="@+id/username_text"
			android:singleLine="true"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
		<TextView
			android:text="@string/enter_passwd"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_gravity="left"
			android:textSize="15.5sp"
			android:textStyle="bold"
			android:textColor="@color/black"/>
		<EditText
			android:id="@+id/password_text"
			android:inputType="textPassword"
			android:singleLine="true"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
		<Button
			android:id="@+id/login_button"
			android:text="@string/login"
			android:textStyle="bold"
			android:textSize="20dp"
			android:layout_marginTop="20dip"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
		<Button
			android:id="@+id/new_user_button"
			android:text="@string/create_new"
			android:textStyle="bold"
			android:textSize="20dp"
			android:layout_marginTop="20dip"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
		<Button
			android:id="@+id/cancel_button"
			android:text="@string/exit"
			android:textStyle="bold"
			android:textSize="20dp"
			android:layout_marginTop="20dip"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
   	</LinearLayout>
</ScrollView>
